# Soothe

./: .gitignore  .gitmodules  .platonic.yml  AGENTS.md  CLAUDE.md  Makefile  README.md  TODO.md  config.dev.yml  docker-compose.yml  pyproject.toml
.agents/skills/fix-all/: SKILL.md
.claude/: settings.local.json
.claude/skills/checkhealth/: AI_AGENT_GUIDE.md
.github/workflows/: ci.yml  release.yml
config/: config.yml  env.example
docs/: user_guide.md
docs/drafts/: 002-weaver-agent-design.md  003-cli-tui-event-progress-clarity.md  README.md  daemon-autostart-non-tui-analysis.md
docs/impl/: 001-soothe-setup-migration.md  003-streaming-examples.md  007-cli-tui-implementation.md  010-tui-layout-history-refresh.md  013-soothe-polish-pass.md  016-agent-optimization-pass.md  025-subagent-progress-visibility.md  034-cli-modularization.md  041-cli-polish.md  046-unified-daemon-protocol.md  047-module-self-containment-refactoring-COMPLETED.md  047-module-self-containment-refactoring-FINAL.md  047-unified-thread-management.md  047-ux-module-refactoring.md  IG-026-rfc0009-logging-enhancements.md  IG-041-cli-polish.md  IG-053-cli-tui-event-progress.md  IG-074-final-summary.md  IG-074-implementation-complete.md  IG-081-daemon-side-event-filtering-implementation.md  IG-081-rfc0001-compliance-fixes.md  IG-082-progress-update.md  IG-082-tui-event-display-polish.md  README.md  RFC-0008-configuration-guide.md
docs/reviews/: rfc-0022-compliance-review.md
docs/specs/: RFC-0001.md  RFC-0002.md  RFC-0003-cli-tui-architecture.md  RFC-0003.md  RFC-0006.md  RFC-0008.md  RFC-0013.md  RFC-0014.md  RFC-0017.md  RFC-0019.md  RFC-0022-daemon-side-event-filtering.md  rfc-history.md  rfc-index.md  rfc-namings.md  rfc-standard.md
docs/specs/templates/: architecture-design.md  conceptual-design.md  impl-guide-template.md  impl-interface-design.md  rfc-template.md
docs/wiki/: README.md  authentication.md  autonomous-mode.md  cli-reference.md  configuration.md  daemon-management.md  getting-started.md  multi-transport.md  subagents.md  thread-management.md  troubleshooting.md  tui-guide.md
examples/: browser_example.py  claude_example.py  planner_example.py  research_example.py  scout_example.py
examples/_shared/: __init__.py  streaming.py
examples/agents/: browser_example.py  claude_example.py  planner_example.py  research_example.py  scout_example.py  skillify_example.py  weaver_example.py
scripts/: check_chrome.sh  verify_finally.sh
src/soothe/: __init__.py  agent.py  config.py
src/soothe/backends/: filesystem_secure.py
src/soothe/cli/: __init__.py  commands.py  daemon.py  main.py  progress_verbosity.py  runner.py  session.py  slash_commands.py  thread_logger.py  tui.py  tui_app.py  tui_shared.py
src/soothe/cognition/: unified_classifier.py
src/soothe/config/: __init__.py  config.yml  daemon_config.py  env.py  models.py  prompts.py  settings.py
src/soothe/config_templates/: config.yml
src/soothe/core/: __init__.py  _resolver_tools.py  _runner_autonomous.py  _runner_checkpoint.py  _runner_phases.py  _runner_steps.py  agent.py  artifact_store.py  base_events.py  concurrency.py  event_catalog.py  events.py  goal_engine.py  query_classifier.py  resolver.py  runner.py  unified_classifier.py
src/soothe/daemon/: __init__.py  _handlers.py  client.py  client_session.py  entrypoint.py  event_bus.py  protocol_v2.py  server.py  singleton.py  thread_logger.py  transport_manager.py  websocket_client.py
src/soothe/inquiry/: engine.py
src/soothe/mcp/: __init__.py  loader.py
src/soothe/middleware/: __init__.py  policy.py  subagent_context.py  system_prompt_optimization.py
src/soothe/plugin/: __init__.py  discovery.py  events.py  global_registry.py  lifecycle.py  registry.py
src/soothe/plugins/: __init__.py
src/soothe/protocols/: __init__.py  durability.py  planner.py
src/soothe/skills/: __init__.py
src/soothe/subagents/: __init__.py  browser.py  claude.py  planner.py  research.py  scout.py
src/soothe/tools/: audio.py  bash.py  cli.py  data.py  document.py  execute.py  file_edit.py  file_ops.py  goals.py  image.py  inquiry.py  jina.py  python_executor.py  serper.py  tabular.py  video.py  websearch.py  wizsearch.py  workspace.py
src/soothe/utils/: __init__.py  error_format.py  progress.py  retry.py  runtime.py  streaming.py  tool_error_handler.py
tests/: README.md  test_tool_error_handler.py
tests/integration/: conftest.py  test_daemon_event_protocol.py  test_daemon_http_protocol.py  test_daemon_multi_client.py  test_daemon_thread_recovery.py  test_daemon_websocket_protocol.py  test_rfc0013_e2e.py
tests/integration_tests/: conftest.py  test_multi_transport.py  test_performance.py  test_system_prompt_optimization_integration.py  test_tool_integration_real_llm.py  test_tools_integration.py  test_vector_store_integration.py
tests/unit/: test_built_in_skills.py  test_cli_daemon.py  test_cli_positional_prompt.py  test_cli_tui_app.py  test_client_session.py  test_core_agent.py  test_daemon_lifecycle.py  test_event_bus.py  test_fixes.py  test_logging_setup.py  test_memory_memu.py  test_message_processing.py  test_progress_rendering.py  test_url_validation.py
tests/unit_tests/: test_artifact_store.py  test_browser_runtime.py  test_browser_subagent_integration.py  test_cli_commands_autonomous.py  test_cli_daemon.py  test_cli_health_state.py  test_cli_session.py  test_cli_tui_app.py  test_config.py  test_consolidated_tools.py  test_context.py  test_durability.py  test_dynamic_goals.py  test_enhanced_reflection.py  test_fixes.py  test_home_expansion.py  test_init_command.py  test_inquiry.py  test_logging_setup.py  test_memory_memu.py  test_memory_store.py  test_persistence.py  test_planning.py  test_policy.py  test_progress_rendering.py  test_progress_verbosity.py  test_protocol_v2.py  test_query_classifier.py  test_subagents.py  test_tools.py  test_tools_audio.py  test_tools_bash.py  test_tools_cli.py  test_tools_document.py  test_tools_file_edit.py  test_tools_python_executor.py  test_tools_video.py  test_transport_abstraction.py  test_vector_store.py
(+153 files in other folders)
