[project]
name = "soothe"
version = "0.1.0"
description = "Multi-agent harness built on deepagents and langchain/langgraph."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<4.0"
keywords = ["agents", "ai", "llm", "langgraph", "langchain", "multi-agent", "subagents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "deepagents>=0.4.10,<1.0.0",
    "langchain-core>=1.2.18,<2.0.0",
    "langchain>=1.2.11,<2.0.0",
    "langchain-openai>=0.3.0,<1.0.0",
    "langchain-community>=0.3.0,<1.0.0",
    "langgraph>=1.1.1,<2.0.0",
    "langchain-mcp-adapters>=0.2.0,<1.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "typer[all]>=0.9.0,<1.0.0",
    "pyyaml>=6.0.0,<7.0.0",
    "textual>=0.40.0",
]

[project.optional-dependencies]
research = [
    "wizsearch>=1.1.2,<2.0.0",
    "tavily-python>=0.5.0",
    "langchain-tavily>=0.2.17",
]
browser = [
    "browser-use<=0.12.0",
]
claude = [
    "claude-agent-sdk>=0.1.40",
]
serper = [
    "requests>=2.31.0",
]
wizsearch = [
    "wizsearch>=1.1.2,<2.0.0",
    "langchain-tavily>=0.2.17",
]
jina = [
    "aiohttp>=3.9.0",
]
media = [
    "pillow>=10.0.0",
    "openai>=1.0.0",
]
bash = [
    "pexpect>=4.9.0",
]
audio-full = [
    "aiohttp>=3.9.0",
]
video = [
    "google-genai>=0.3.0",
]
document = [
    "PyMuPDF>=1.24.0",
]
python-executor = [
    "ipython>=8.0.0",
    "matplotlib>=3.8.0",
]
rocksdb = [
    "rocksdict>=0.3",
]
pgvector = [
    "psycopg[pool]>=3.1",
    "pgvector>=0.3",
]
weaviate = [
    "weaviate-client>=4.0",
]
ollama = [
    "langchain-ollama>=0.3.0",
]
all = [
    "soothe[research,browser,claude,serper,wizsearch,jina,media,bash,audio-full,video,document,python-executor,rocksdb,pgvector,weaviate,ollama]",
]

[dependency-groups]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov",
    "ruff>=0.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/soothe"]
artifacts = ["src/soothe/built_in_skills/**/*.md"]

[tool.hatch.build.targets.sdist]
packages = ["src/soothe"]
artifacts = ["src/soothe/built_in_skills/**/*.md"]

[project.scripts]
soothe = "soothe.cli:app"

[tool.ruff]
line-length = 120
exclude = []

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",
    "ISC001",
    "PERF203",
    "SLF001",
    "PLR0913",
    "PLC0414",
]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.ruff.lint.isort]
force-single-line = false
combine-as-imports = true
known-first-party = ["soothe"]

[tool.ruff.lint.pydocstyle]
convention = "google"
ignore-var-parameters = true

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN001", "ANN002", "ANN003", "ANN201", "ANN202", "ARG002", "B007", "B011", "BLE001", "D1", "EM101", "F401", "F841", "I001", "PD003", "PD101", "PLC0415", "PLR2004", "PT012", "PT015", "PT018", "PTH100", "PTH109", "PTH118", "RUF059", "S101", "S108", "S110", "S311", "S324", "SIM117", "SIM300", "TRY003", "TRY300", "UP012", "W292"]
"src/soothe/protocols/**" = ["ANN401", "TC003"]
"src/soothe/planning/**" = ["ANN401", "BLE001", "D107", "TRY300"]
"src/soothe/policy/**" = ["D107", "PLR0911"]
"src/soothe/durability/**" = ["ANN401"]
"src/soothe/remote/**" = ["ANN401", "ARG002", "PLC0415", "TC003"]
"src/soothe/config.py" = ["ANN401", "EM102", "PLC0415", "PTH123", "TC002", "TRY003"]
"src/soothe/agent.py" = ["ARG001", "C901", "PLC0415", "PLR0911", "SIM108", "TC001", "TC002", "TC003"]
"src/soothe/vector_store/**" = ["ANN401", "ARG002", "B905", "BLE001", "D107", "PLC0415", "S608", "TC001"]
"src/soothe/persistence/**" = ["ANN401", "PLC0415", "SIM105"]
"src/soothe/context/**" = ["BLE001"]
"src/soothe/memory_store/**" = ["BLE001"]
"src/soothe/cli/**" = ["ANN", "ARG002", "ASYNC240", "BLE001", "C901", "D107", "E501", "F811", "F821", "F841", "FBT002", "G201", "PIE810", "PLC0415", "PLR0911", "PLR0912", "PLR0915", "PLR1714", "PLR2004", "PTH118", "PTH123", "RUF012", "S110", "S603", "S607", "SIM102", "SIM105", "TCH003", "TC002", "TRY300"]
"src/soothe/core/resolver.py" = ["ARG001", "BLE001", "C901", "D107", "N806", "PLC0415", "PLR0911", "PLR0912", "PLR0915", "PTH100", "PTH109", "RUF100", "S110", "S112", "SIM105", "TC001", "TC002", "TC003"]
"src/soothe/backends/**" = ["ANN401", "ARG001", "ARG002", "BLE001", "B007", "B905", "D107", "E501", "EM101", "G201", "PLC0415", "PLR0911", "PLR2004", "PTH100", "RUF005", "RUF012", "RUF100", "S110", "S608", "SIM102", "SIM105", "TC001", "TC002", "TC003", "TRY003", "TRY300"]
"src/soothe/subagents/**" = ["ANN204", "ANN401", "ARG001", "ASYNC230", "ASYNC240", "BLE001", "C901", "D102", "D107", "EM101", "F401", "FBT001", "FBT002", "G201", "I001", "PERF401", "PLC0415", "PLR0912", "PLR0915", "PLR2004", "PTH109", "PTH123", "RUF006", "RUF059", "RUF100", "SIM105", "SIM117", "TC001", "TC002", "TC003", "TRY003", "TRY300"]
"src/soothe/tools/**" = ["ANN401", "BLE001", "C409", "C901", "D102", "D107", "EM101", "EM102", "F841", "G201", "I001", "PD003", "PD101", "PERF401", "PLC0415", "PLR0911", "PLR0912", "PLR0915", "PLR2004", "PTH100", "PTH109", "PTH123", "RUF100", "SIM108", "SIM115", "TC001", "TRY003", "TRY300", "UP045", "W292"]
"src/soothe/built_in_skills/**" = ["C901", "PLC0415", "TRY300"]
"src/soothe/core/agent.py" = ["C409", "C901", "PLC0415", "PLR0912", "PLR0915", "PTH100", "PTH109", "SIM108", "TC001", "TC002", "TC003"]
"src/soothe/core/runner.py" = ["ANN401", "ARG002", "BLE001", "C901", "F841", "PLC0415", "PLR0912", "PLR0915", "PLR2004", "TC001"]
"src/soothe/core/goal_engine.py" = ["BLE001", "D107", "EM102", "TRY003"]
"src/soothe/mcp/loader.py" = ["PLC0415", "TC001"]
"src/soothe/middleware/policy.py" = ["BLE001", "D102", "D107", "TC002", "TC003"]
"src/soothe/middleware/subagent_context.py" = ["BLE001", "D102", "D107", "TC001", "TC002", "TC003"]
"src/soothe/utils/progress.py" = ["PLC0415", "TC003"]
"src/soothe/tools/bash.py" = ["ANN401", "BLE001", "D107", "G201", "I001", "PLC0415", "PLR0911", "PTH100", "RUF012", "RUF100", "SIM110", "TRY300", "W292"]
"src/soothe/tools/python_executor.py" = ["ANN401", "ASYNC109", "BLE001", "C401", "D107", "F401", "F841", "G201", "I001", "PLC0415", "PTH109", "RUF012", "RUF100", "TRY300", "W292"]
"src/soothe/tools/file_edit.py" = ["ANN401", "BLE001", "C901", "D107", "DTZ005", "DTZ006", "EM102", "F401", "FBT001", "FBT002", "G201", "I001", "PLC0415", "RUF100", "S112", "SIM108", "TRY003", "TRY300", "UP045", "W292"]
"src/soothe/tools/audio.py" = ["BLE001", "EM101", "G201", "I001", "PLC0415", "PLR0911", "RUF100", "SIM115", "TRY003", "TRY300", "W292"]
"src/soothe/tools/video.py" = ["ANN401", "BLE001", "EM102", "G201", "I001", "PLC0415", "RUF100", "TRY003", "TRY301", "TRY300", "UP045", "W292"]
"src/soothe/tools/document.py" = ["ANN401", "BLE001", "EM101", "EM102", "G201", "I001", "PLC0415", "RET505", "RUF100", "SIM102", "SIM115", "TRY003", "TRY300", "UP045", "W292"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
